# jamanak

./: .calngd  .gitignore  CMakeLists.txt  LICENSE.txt  README.md
include/: jamanak.hpp
src/: example.cpp  jamanak.cpp
